# jeffnet

./: README.md  jeffnet.user.js  nations.txt  setup.sh
src-cat/: .gitignore  Cargo.toml  jnday_sheet.html  nations.csv  nations.txt  sheet.html
src-cat/src/: main.rs
src-str/: Cargo.toml  SORTEDnations.txt  nations.txt
src-str/src/: main.rs
